@@ -1,12 +1,11 @@
 [project]
 name = "qcore"
 version = "1.10.1"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 keywords = ["quora", "core", "common", "utility"]
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -20,7 +19,7 @@ license = {text = "Apache Software License"}
 dynamic = ["readme"]
 
 [tool.black]
-target_version = ['py37', 'py38', 'py39', 'py310', 'py311']
+target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
 include = '\.pyi?$'
 skip-magic-trailing-comma = true
 preview = true
@@ -36,7 +35,7 @@ exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.7"
+python_version = "3.9"
 warn_unused_configs = true
 
 [[tool.mypy.overrides]]
@@ -48,4 +47,4 @@ requires = ["setuptools>=64.0", "cython>=3"]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-build = "cp{38,39,310,311,312}-*"
+build = "cp{39,310,311,312,313}-*"
