@@ -1,3 +1,3 @@
-pytest==7.4.0
-mypy==1.8.0
-black==24.3.0
+pytest==8.3.3
+mypy==1.11.2
+black==24.10.0
