@@ -1,7 +1,7 @@
 [tox]
 minversion=2.3.1
 envlist =
-    py38,py39,py310,py311,py312,py313
+    py39,py310,py311,py312,py313
     mypy
     black
 skip_missing_interpreters = True
@@ -14,7 +14,7 @@ commands =
     python -X dev -Werror -m pytest qcore
 
 [testenv:mypy]
-basepython = python3.8
+basepython = python3.9
 deps =
     -rrequirements.txt
 
@@ -27,8 +27,7 @@ commands =
 
 [gh-actions]
 python =
-    3.8: py38, mypy
-    3.9: py39
+    3.9: py39, mypy
     3.10: py310
     3.11: py311
     3.12: py312, black
